Sonar fixes in progress