@@ -1,4 +1,4 @@
-// Copyright (c) 2021, 2024, Oracle and/or its affiliates.
+// Copyright (c) 2021, 2025, Oracle and/or its affiliates.
 // Licensed under the Universal Permissive License v 1.0 as shown at https://oss.oracle.com/licenses/upl.
 
 package oracle.kubernetes.operator.steps;
@@ -272,7 +272,7 @@ class MonitoringExporterStepsTest {
           .filter(this::isPutRequest)
           .map(HttpRequest::uri)
           .map(URI::getHost)
-          .collect(Collectors.toList());
+          .toList();
   }
 
   private boolean isPutRequest(HttpRequest request) {
